# Spine-Analysis

./: README.md
spineposeapp/backend/: Dockerfile  pyproject.toml
spineposeapp/backend/alembic/: env.py
spineposeapp/backend/alembic/versions/: 001_initial_schema.py  002_doctor_detector_preference.py  003_doctor_role.py  004_dataset_items.py  005_research_datasets.py
spineposeapp/backend/app/: config.py  database.py  main.py
spineposeapp/backend/app/constants/: manual_labels.py
spineposeapp/backend/app/models/: __init__.py  dataset_item.py  doctor.py  patient.py  research_dataset.py  scan.py
spineposeapp/backend/app/pipeline/: __init__.py  base.py  head_shoulder_metrics.py  image_utils.py  keypoint_normalizer.py  keypoint_scoliosis.py  kyphosis_classifier.py  landmark_mapping.py  landmark_refresh.py  leg_metrics.py  loader.py  lordosis_classifier.py  metric_engine.py  pelvis_metrics.py  pose_inference.py  reconstructor_3d.py  sagittal_curve.py  scoliosis_detector.py  side_view_classifier.py  spine_back_metrics.py  spine_curve_model.py  spinepose_detector.py  yolo_detector.py  yolo_inference.py
spineposeapp/backend/app/routers/: __init__.py  admin.py  auth.py  doctors.py  patients.py  scans.py
spineposeapp/backend/app/schemas/: __init__.py  admin.py  auth.py  dataset.py  doctor.py  patient.py  scan.py
spineposeapp/backend/models/: yolo26n-cls-kyphosis.pt  yolo26n-cls-lordosis.pt
spineposeapp/backend/tests/: conftest.py  test_admin.py  test_auth.py  test_dashboard.py  test_dataset.py  test_patients.py  test_scans.py  test_settings.py
(+96 files in other folders)
