[project]
name = "spinepose-backend"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.3",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "email-validator==2.2.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "python-multipart==0.0.12",
  "celery[redis]==5.4.0",
  "redis==5.1.0",
  "boto3==1.35.0",
  "numpy==2.1.1",
  "opencv-python-headless==4.10.0.84",
  "open3d==0.19.0",
  "scipy==1.14.1",
  "pillow==10.4.0",
  "httpx==0.27.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
